--- a/_source/LigaCancer/Views/Patient/Partials/_EditPatientNaturality.cshtml
+++ b/_source/LigaCancer/Views/Patient/Partials/_EditPatientNaturality.cshtml
@@ -1,12 +1,6 @@
 ﻿@model RVCC.Models.FormModel.NaturalityFormModel
 
-<form id="editPatientNaturalityForm" asp-action="EditPatientNaturality"
-      role="form"
-      data-ajax="true"
-      data-ajax-method="POST"
-      data-ajax-failure="error"
-      data-ajax-success="editNaturalitySuccess"
-      data-ajax-loading="#submitSpinner">
+<form id="editPatientNaturalityForm" asp-action="EditPatientNaturality" method="post" >
 
     <partial name="Partials/_PatientNaturality" />
 
