--- a/_source/LigaCancer/Views/Patient/Partials/_AddPatientInformation.cshtml
+++ b/_source/LigaCancer/Views/Patient/Partials/_AddPatientInformation.cshtml
@@ -1,12 +1,6 @@
 ﻿@model RVCC.Models.FormModel.PatientInformationFormModel
 
-<form id="addPatientInformationForm" asp-action="AddPatientInformation"
-      role="form"
-      data-ajax="true"
-      data-ajax-method="POST"
-      data-ajax-failure="error"
-      data-ajax-success="addPatientInformationSuccess"
-      data-ajax-loading="#submitSpinner">
+<form id="addPatientInformationForm" asp-action="AddPatientInformation" method="post">
 
     <div class="progress m-3 progressAddPatient">
         <div class="progress-bar bg-success" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
