--- a/_source/LigaCancer/Views/Patient/Partials/_AddPatientProfile.cshtml
+++ b/_source/LigaCancer/Views/Patient/Partials/_AddPatientProfile.cshtml
@@ -1,13 +1,7 @@
 ﻿@model RVCC.Models.FormModel.PatientProfileFormModel
 
-<form id="addPatientProfileForm" asp-action="AddPatientProfile"
-        role="form"
-        data-ajax="true"
-        data-ajax-method="POST"
-        data-ajax-failure="error"
-        data-ajax-success="addProfileSuccess"
-        data-ajax-loading="#submitSpinner">
-
+<form id="addPatientProfileForm" asp-action="AddPatientProfile" method="post">
+    
     <div class="progress m-3 progressAddPatient">
         <div class="progress-bar bg-success" role="progressbar" style="width: 20%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">20%</div>
     </div>
