--- a/_source/LigaCancer/Views/FamilyMember/Partials/_Index.cshtml
+++ b/_source/LigaCancer/Views/FamilyMember/Partials/_Index.cshtml
@@ -1,37 +1,36 @@
 ﻿@model RVCC.Models.SearchModel.FamilyMemberSearchModel
 
-<div class="row">
-    <div class="col-lg-12">
-        <div class="card">
-            <div class="card-body">
-                <input asp-for="PatientId" id="familyMemberPatientId" />
+<div class="card">
+    <div class="card-header">
+        <i class="fa fa-male"></i>Membros Familiares
+    </div>
+    <div class="card-body">
+        <input asp-for="PatientId" id="familyMemberPatientId" />
 
-                <div class="row">
-                    <div class="col-lg-4">
-                        <strong>Renda do Paciente:</strong>
-                        <span id="monthlyIncome"></span>
-                    </div>
-                    <div class="col-lg-4">
-                        <strong>Renda Familiar Total:</strong>
-                        <span id="familyIncome"></span>
-                    </div>
-                    <div class="col-lg-4">
-                        <strong>Renda Per Capita:</strong>
-                        <span id="perCapitaIncome"></span>
-                    </div>
-                </div>
-
-                <hr />
-
-                <div class="form-inline float-right">
-                    <a id="addFamilyMemberButton" asp-action="AddFamilyMember" asp-controller="FamilyMember" asp-route-id="@Model.PatientId" data-title="Adicionar Membro Familiar" class="btn btn-primary"
-                       data-toggle="modal" data-target="#modal-action-secondary">
-                        <i class="fa fa-plus"></i> Adicionar Membro Familiar
-                    </a>
-                </div>
-
-                <table class="table table-bordered table-striped text-center" id="familyMemberTable"></table>
+        <div class="row">
+            <div class="col-lg-4">
+                <strong>Renda do Paciente:</strong>
+                <span id="monthlyIncome"></span>
+            </div>
+            <div class="col-lg-4">
+                <strong>Renda Familiar Total:</strong>
+                <span id="familyIncome"></span>
+            </div>
+            <div class="col-lg-4">
+                <strong>Renda Per Capita:</strong>
+                <span id="perCapitaIncome"></span>
             </div>
         </div>
+
+        <hr />
+
+        <div class="form-inline float-right">
+            <a id="addFamilyMemberButton" asp-action="AddFamilyMember" asp-controller="FamilyMember" asp-route-id="@Model.PatientId" data-title="Adicionar Membro Familiar" class="btn btn-primary"
+               data-toggle="modal" data-target="#modal-action-secondary">
+                <i class="fa fa-plus"></i> Adicionar Membro Familiar
+            </a>
+        </div>
+
+        <table class="table table-bordered table-striped text-center" id="familyMemberTable"></table>
     </div>
 </div>
