#155 added webpack on all things

--- a/_source/LigaCancer/Views/Address/Partials/_EditAddress.cshtml
+++ b/_source/LigaCancer/Views/Address/Partials/_EditAddress.cshtml
@@ -1,13 +1,7 @@
 ﻿@using RVCC.Business
 @model RVCC.Models.FormModel.AddressFormModel
 
-<form id="editAddressForm" asp-action="EditAddress"
-      role="form"
-      data-ajax="true"
-      data-ajax-method="POST"
-      data-ajax-failure="error"
-      data-ajax-success="editAddressSuccess"
-      data-ajax-loading="#submitSpinner">
+<form id="editAddressForm" asp-action="EditAddress" method="post" >
 
     <div class="modal-body form-horizontal" id="">
         <div class="form-group">
@@ -37,14 +31,7 @@
         </div>
         <div class="form-group">
             <label asp-for="ResidenceType" class="control-label"></label>
-            <select asp-for="ResidenceType" asp-items="Html.GetEnumSelectList<Globals.ResidenceType>()" class="form-control addressSelect2" style="width: 100%"
-                    data-theme="bootstrap"
-                    data-language="pt-BR" 
-                    data-placeholder="Tipo de Residência" 
-                    data-width="resolve"
-                    data-allow-clear="true" 
-                    data-minimum-results-for-search="Infinity" 
-                    data-container-css-class="select2NoSearch">
+            <select asp-for="ResidenceType" asp-items="Html.GetEnumSelectList<Globals.ResidenceType>()" class="form-control">
                 <option value=""></option>
             </select>
             <span asp-validation-for="ResidenceType" class="text-danger"></span>
