--- a/_source/LigaCancer/Views/Address/Partials/_Index.cshtml
+++ b/_source/LigaCancer/Views/Address/Partials/_Index.cshtml
@@ -3,12 +3,20 @@
 <div class="card">
     <div class="card-header">
         <i class="fa fa-male"></i>Endereços
+
+        <div class="card-header-actions">
+            <a class="card-header-action btn-minimize" href="#" data-toggle="collapse" data-target="#addressCollapse" aria-expanded="true">
+                <i class="fa fa-minus"></i>
+            </a>
+        </div>
+
     </div>
-    <div class="card-body">
+
+    <div class="card-body collapse" id="addressCollapse">
         <input asp-for="PatientId" id="addressPatientId" />
         <div class="form-inline float-right">
             <a id="addAddressButton" asp-action="AddAddress" asp-controller="Address" asp-route-id="@Model.PatientId" data-title="Adicionar Endereço" class="btn btn-primary"
-               data-toggle="modal" data-target="#modal-action-secondary">
+               data-toggle="modal" data-target="#modal-action">
                 <i class="fa fa-plus"></i> Adicionar Endereço
             </a>
         </div>
