--- a/_source/LigaCancer/Views/FamilyMember/Partials/_Index.cshtml
+++ b/_source/LigaCancer/Views/FamilyMember/Partials/_Index.cshtml
@@ -3,8 +3,16 @@
 <div class="card">
     <div class="card-header">
         <i class="fa fa-male"></i>Membros Familiares
+
+        <div class="card-header-actions">
+            <a class="card-header-action btn-minimize" href="#" data-toggle="collapse" data-target="#familyMemberCollapse" aria-expanded="true">
+                <i class="fa fa-minus"></i>
+            </a>
+        </div>
     </div>
-    <div class="card-body">
+
+    <div class="card-body collapse" id="familyMemberCollapse">
+
         <input asp-for="PatientId" id="familyMemberPatientId" />
 
         <div class="row">
@@ -26,7 +34,7 @@
 
         <div class="form-inline float-right">
             <a id="addFamilyMemberButton" asp-action="AddFamilyMember" asp-controller="FamilyMember" asp-route-id="@Model.PatientId" data-title="Adicionar Membro Familiar" class="btn btn-primary"
-               data-toggle="modal" data-target="#modal-action-secondary">
+               data-toggle="modal" data-target="#modal-action">
                 <i class="fa fa-plus"></i> Adicionar Membro Familiar
             </a>
         </div>
