--- a/_source/LigaCancer/Views/Patient/Index.cshtml
+++ b/_source/LigaCancer/Views/Patient/Index.cshtml
@@ -186,7 +186,7 @@
                                     </a>
                                 </div>
 
-                                <table class="table table-bordered table-striped text-center" id="patientTable"></table>
+                                <table class="table table-bordered table-striped text-center responsive" id="patientTable"></table>
                             </div>
                         </div>
                     </div>
