--- a/_source/LigaCancer/Views/FamilyMember/Partials/_AddFamilyMember.cshtml
+++ b/_source/LigaCancer/Views/FamilyMember/Partials/_AddFamilyMember.cshtml
@@ -1,13 +1,7 @@
 ﻿@using RVCC.Business
 @model RVCC.Models.FormModel.FamilyMemberFormModel
 
-<form id="addFamilyMemberForm" asp-action="AddFamilyMember"
-      role="form"
-      data-ajax="true"
-      data-ajax-method="POST"
-      data-ajax-failure="error"
-      data-ajax-success="addFamilyMemberSuccess"
-      data-ajax-loading="#submitSpinner">
+<form id="addFamilyMemberForm" asp-action="AddFamilyMember" method="post">
 
     <div class="modal-body form-horizontal" id="">
         <div class="form-group">
@@ -27,13 +21,7 @@
         </div>
         <div class="form-group">
             <label asp-for="Sex" class="control-label"></label>
-            <select asp-for="Sex" asp-items="Html.GetEnumSelectList<Globals.Sex>()" class="form-control familyMemberSelect2" style="width: 100%"
-                    data-theme="bootstrap"
-                    data-language="pt-BR"
-                    data-placeholder="Gênero"
-                    data-width="resolve"
-                    data-minimum-results-for-search="Infinity"
-                    data-container-css-class="select2NoSearch"></select>
+            <select asp-for="Sex" asp-items="Html.GetEnumSelectList<Globals.Sex>()" class="form-control"></select>
             <span asp-validation-for="Sex" class="text-danger"></span>
         </div>
         <div class="form-group">
