--- a/_source/LigaCancer/Views/Patient/Partials/_ArchivePatient.cshtml
+++ b/_source/LigaCancer/Views/Patient/Partials/_ArchivePatient.cshtml
@@ -1,24 +1,12 @@
 ﻿@using RVCC.Business
 @model RVCC.Models.FormModel.ArchivePatientFormModel
 
-<form id="archivePatientForm" asp-action="ArchivePatient"
-      role="form"
-      data-ajax="true"
-      data-ajax-method="POST"
-      data-ajax-failure="error"
-      data-ajax-success="archivePatientSuccess"
-      data-ajax-loading="#submitSpinner">
+<form id="archivePatientForm" asp-action="ArchivePatient" method="post" >
 
     <div class="modal-body form-horizontal">
         <div class="form-group">
             <label asp-for="ArchivePatientType" class="control-label"></label>
-            <select asp-for="ArchivePatientType" asp-items="Html.GetEnumSelectList<Globals.ArchivePatientType>()" class="form-control archiveSelect2" style="width: 100%"
-                    data-theme="bootstrap"
-                    data-language="pt-BR" 
-                    data-placeholder="Motivo"
-                    data-width="resolve"
-                    data-minimum-results-for-search="Infinity" 
-                    data-container-css-class="select2NoSearch"></select>
+            <select asp-for="ArchivePatientType" asp-items="Html.GetEnumSelectList<Globals.ArchivePatientType>()" class="form-control"></select>
             <span asp-validation-for="ArchivePatientType"></span>
         </div>
         <div class="form-group">
