--- a/_source/LigaCancer/Views/Phone/Partials/_AddPhone.cshtml
+++ b/_source/LigaCancer/Views/Phone/Partials/_AddPhone.cshtml
@@ -1,13 +1,7 @@
 ﻿@using RVCC.Business
 @model RVCC.Models.FormModel.PhoneFormModel
 
-<form id="addPhoneForm" asp-action="AddPhone"
-      role="form"
-      data-ajax="true"
-      data-ajax-method="POST"
-      data-ajax-failure="error"
-      data-ajax-success="addPhoneSuccess"
-      data-ajax-loading="#submitSpinner">
+<form id="addPhoneForm" asp-action="AddPhone" method="post" >
 
     <div class="modal-body form-horizontal">
         <div class="form-group">
@@ -17,14 +11,7 @@
         </div>
         <div class="form-group">
             <label asp-for="PhoneType" class="control-label"></label>
-            <select asp-for="PhoneType" asp-items="Html.GetEnumSelectList<Globals.PhoneType>()" class="form-control phoneSelect2" style="width: 100%"
-                    data-theme="bootstrap"
-                    data-language="pt-BR" 
-                    data-placeholder="Tipo do Telefone" 
-                    data-width="resolve"
-                    data-allow-clear="true" 
-                    data-minimum-results-for-search="Infinity" 
-                    data-container-css-class="select2NoSearch">
+            <select asp-for="PhoneType" asp-items="Html.GetEnumSelectList<Globals.PhoneType>()" class="form-control">
                 <option value=""></option>
             </select>
             <span asp-validation-for="PhoneType" class="text-danger"></span>
