--- a/_source/LigaCancer/src/sass/patient/index.scss
+++ b/_source/LigaCancer/src/sass/patient/index.scss
@@ -1,4 +1,5 @@
 ﻿@import '~datatables.net-bs4/css/datatables.bootstrap4.min.css';
+@import '~datatables.net-responsive-bs4/css/responsive.bootstrap4.min.css';
 @import "~bootstrap-datepicker/dist/css/bootstrap-datepicker.min";
 @import '~select2/dist/css/select2.min.css';
 @import 'select2-theme-bootstrap4/src/build';
