#155 resize table after resize screen

--- a/_source/LigaCancer/Views/Address/Partials/_Index.cshtml
+++ b/_source/LigaCancer/Views/Address/Partials/_Index.cshtml
@@ -27,6 +27,6 @@
             </div>
         }
 
-        <table class="table table-bordered table-striped text-center" id="addressTable"></table>
+        <table width="100%" class="table table-bordered table-striped text-center" id="addressTable"></table>
     </div>
 </div>
