--- a/_source/LigaCancer/Views/FamilyMember/Partials/_Index.cshtml
+++ b/_source/LigaCancer/Views/FamilyMember/Partials/_Index.cshtml
@@ -43,6 +43,6 @@
             </div>
         }
 
-        <table class="table table-bordered table-striped text-center" id="familyMemberTable"></table>
+        <table width="100%" class="table table-bordered table-striped text-center" id="familyMemberTable"></table>
     </div>
 </div>
