--- a/_source/LigaCancer/Views/FileAttachment/Partials/_Index.cshtml
+++ b/_source/LigaCancer/Views/FileAttachment/Partials/_Index.cshtml
@@ -22,6 +22,6 @@
             </a>
         </div>
 
-        <table class="table table-bordered table-striped text-center" id="attachmentsTable"></table>
+        <table width="100%" class="table table-bordered table-striped text-center" id="attachmentsTable"></table>
     </div>
 </div>
