--- a/_source/LigaCancer/Views/Patient/Index.cshtml
+++ b/_source/LigaCancer/Views/Patient/Index.cshtml
@@ -189,7 +189,7 @@
                                     </div>
                                 }
 
-                                <table class="table table-bordered table-striped text-center" id="patientTable"></table>
+                                <table width="100%" class="table table-bordered table-striped text-center" id="patientTable"></table>
                             </div>
                         </div>
                     </div>
