--- a/_source/LigaCancer/Views/Phone/Partials/_Index.cshtml
+++ b/_source/LigaCancer/Views/Phone/Partials/_Index.cshtml
@@ -26,6 +26,6 @@
             </div>
         }
 
-        <table class="table table-bordered table-striped text-center" id="phoneTable"></table>
+        <table width="100%" class="table table-bordered table-striped text-center" id="phoneTable"></table>
     </div>
 </div>
