--- a/_source/LigaCancer/Views/Presence/Index.cshtml
+++ b/_source/LigaCancer/Views/Presence/Index.cshtml
@@ -77,7 +77,7 @@
                                     </a>
                                 </div>
 
-                                <table class="table table-bordered table-striped text-center" id="presenceTable"></table>
+                                <table width="100%" class="table table-bordered table-striped text-center" id="presenceTable"></table>
                             </div>
 
                         </div>
