--- a/_source/LigaCancer/Views/TreatmentPlace/Index.cshtml
+++ b/_source/LigaCancer/Views/TreatmentPlace/Index.cshtml
@@ -66,7 +66,7 @@
                                     </a>
                                 </div>
 
-                                <table class="table table-bordered table-striped text-center" id="treatmentPlaceTable"></table>
+                                <table width="100%" class="table table-bordered table-striped text-center" id="treatmentPlaceTable"></table>
                             </div>
                         </div>
                     </div>
