--- a/_source/LigaCancer/Views/Presence/Index.cshtml
+++ b/_source/LigaCancer/Views/Presence/Index.cshtml
@@ -72,7 +72,7 @@
                             </div>
                             <div class="card-body">
                                 <div class="form-inline float-right">
-                                    <a id="addPresenceButton" asp-action="AddPresence" data-toggle="modal" data-target="#modal-action" class="btn btn-primary">
+                                    <a id="addPresenceButton" asp-action="AddPresence" data-title="Adicionar Presença" data-toggle="modal" data-target="#modal-action" class="btn btn-primary">
                                         <i class="fa fa-plus"></i> Adicionar Presença
                                     </a>
                                 </div>
