--- a/_source/LigaCancer/Views/Patient/Details.cshtml
+++ b/_source/LigaCancer/Views/Patient/Details.cshtml
@@ -14,6 +14,8 @@
     </environment>
 }
 
+<input asp-for="PatientId" id="patientId" hidden="hidden" />
+
 <main class="main">
     <ol class="breadcrumb">
         <li class="breadcrumb-item">
