#462 patient benefits implemented

--- a/_source/LigaCancer/Views/Patient/Details.cshtml
+++ b/_source/LigaCancer/Views/Patient/Details.cshtml
@@ -267,6 +267,10 @@
                     </div>
 
                     <div class="col-12">
+                        <partial name="~/Views/PatientBenefit/Partials/_Index.cshtml"/>
+                    </div>
+
+                    <div class="col-12">
                         <partial name="~/Views/FamilyMember/Partials/_Index.cshtml" model="new FamilyMemberSearchModel(Model.PatientId)" />
                     </div>
 
