#465 implemented stays and put presence and stays on patient detals

--- a/_source/LigaCancer/Views/Patient/Details.cshtml
+++ b/_source/LigaCancer/Views/Patient/Details.cshtml
@@ -267,7 +267,15 @@
                     </div>
 
                     <div class="col-12">
-                        <partial name="~/Views/PatientBenefit/Partials/_Index.cshtml"/>
+                        <partial name="~/Views/PatientBenefit/Partials/_Index.cshtml" />
+                    </div>
+
+                    <div class="col-12">
+                        <partial name="~/Views/Presence/Partials/_Index.cshtml" />
+                    </div>
+
+                    <div class="col-12">
+                        <partial name="~/Views/Stay/Partials/_Index.cshtml" />
                     </div>
 
                     <div class="col-12">
