--- a/_source/LigaCancer/Views/PatientBenefit/Partials/_Index.cshtml
+++ b/_source/LigaCancer/Views/PatientBenefit/Partials/_Index.cshtml
@@ -9,7 +9,7 @@
         </div>
     </div>
 
-    <div class="card-body collapse show" id="patientBenefitCollapse">
+    <div class="card-body collapse" id="patientBenefitCollapse">
         <table width="100%" class="table table-bordered table-striped text-center" id="patientBenefitTable"></table>
     </div>
 </div>
