--- a/_source/LigaCancer/Views/Shared/_Layout.cshtml
+++ b/_source/LigaCancer/Views/Shared/_Layout.cshtml
@@ -57,7 +57,6 @@
                     {
 
                         <li class="nav-title">Benefícios</li>
-
                         <li class="nav-item">
                             <a asp-action="Index" asp-controller="PatientBenefit" class="nav-link">
                                 <i class="nav-icon fa fa-gift"></i> Benefícios
@@ -70,6 +69,13 @@
                             </a>
                         </li>
 
+                        <li class="nav-title">Estadias</li>
+                        <li class="nav-item">
+                            <a asp-action="Index" asp-controller="Stay" class="nav-link">
+                                <i class="nav-icon fa fa-gift"></i> Estadias
+                            </a>
+                        </li>
+                       
                         <li class="nav-title">Informações Médicas</li>
                         <li class="nav-item">
                             <a asp-action="Index" asp-controller="Medicine" class="nav-link">
