--- a/_source/LigaCancer/Views/Patient/Details.cshtml
+++ b/_source/LigaCancer/Views/Patient/Details.cshtml
@@ -29,7 +29,7 @@
     <div class="container-fluid">
         <div class="card h-100">
             <div class="card-header">
-                <iframe src="/Patient/PrintPatient" style="display:none;" name="frame"></iframe>
+                <iframe src="/Patient/Print/@Model.PatientId" style="display:none;" name="frame"></iframe>
                 <button class="btn btn-sm btn-primary float-left" onclick="frames['frame'].print()">
                     <span class='fas fa-print'></span> Imprimir Paciente
                 </button>
@@ -311,8 +311,7 @@
 
 @section scripts {
     <environment names="Development">
-        <script src="http://www.position-absolute.com/creation/print/jquery.min.js" type="text/javascript"></script>
-        <script src="http://www.position-absolute.com/creation/print/jquery.printPage.js" type="text/javascript"></script>
+        <script src="~/dist/js/patient-details.bundle.js"></script>
     </environment>
     <environment exclude="Development">
         <script src="~/dist/js/patient-details.bundle.js" asp-append-version="true"></script>
